--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "express": "^4.19.2",
+    "firebase": "^10.12.4",
     "node-fetch": "^3.3.2",
-    "pip": "^0.0.1"
+    "pip": "^0.0.1",
+    "sentiment": "^5.0.2"
   }
 }
